# dp-ao-comm-mockup

./: .gitignore  README.md  meson.build
ao_comm/: ao_to_lsl.cpp  ao_to_lsl.hpp  main.cpp  tcp_server.cpp
ao_comm_deps/: README.md
config/: general.toml
tests/: collect_data.py
